--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ repositories {
 
 dependencies {
     testCompile "junit:junit:4.12"
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
 }
 
 test {
